# cad_agent

./: pyproject.toml  requirements.txt
config/: agents.yaml  agents_glm.yaml  agents_ollama.yaml  agents_unified.yaml  agents_zai_openai.yaml  agents_zai_openai_fast.yaml  tasks.yaml
examples/: simple_example.py
src/: __init__.py  main.py
src/agents/: __init__.py
src/crew/: __init__.py  cad_generation_crew.py
src/tools/: __init__.py  build123d_doc_tool.py  local_python_executor.py  secure_cad_executor.py
